# bao

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yml  release.yml
bao/: Cargo.toml  README.md  release.toml
bao-codegen/: Cargo.toml  README.md
bao-codegen-rust/: Cargo.toml  README.md
bao-codegen-rust/src/: generator.rs  lib.rs  naming.rs  render.rs  renderer.rs  rust_file.rs  structure_renderer.rs  type_mapper.rs
bao-codegen-rust/src/adapters/: clap.rs  eyre.rs  mod.rs  sqlx.rs  tokio.rs
bao-codegen-rust/src/ast/: attrs.rs  chains.rs  enums.rs  fns.rs  impls.rs  mod.rs  structs.rs
bao-codegen-rust/src/files/: app_rs.rs  bao_toml.rs  cargo_toml.rs  cli_rs.rs  command_rs.rs  commands_mod.rs  context_rs.rs  generated_mod.rs  gitignore.rs  handler_stub.rs  handlers_mod.rs  main_rs.rs  mod.rs
bao-codegen-rust/tests/: codegen_compiles.rs  codegen_snapshots.rs
bao-codegen-rust/tests/snapshots/: codegen_snapshots__basic_cli_definition.snap  codegen_snapshots__basic_cli_main.snap  codegen_snapshots__cargo_toml.snap
bao-codegen-typescript/: Cargo.toml  README.md
bao-codegen-typescript/src/: code_file.rs  generator.rs  lib.rs  naming.rs  renderer.rs  structure_renderer.rs  type_mapper.rs
bao-codegen-typescript/src/adapters/: boune.rs  bun_sqlite.rs  mod.rs
bao-codegen-typescript/src/ast/: arrays.rs  chain.rs  consts.rs  exports.rs  fns.rs  imports.rs  interface.rs  mod.rs  objects.rs  types.rs
bao-codegen-typescript/src/files/: bao_toml.rs  cli_ts.rs  command_ts.rs  context_ts.rs  gitignore.rs  handler_ts.rs  index_ts.rs  mod.rs  package_json.rs  tsconfig.rs
bao-codegen-typescript/tests/: bao_toml_preserved.rs  codegen_snapshots.rs
bao-codegen-typescript/tests/snapshots/: codegen_snapshots__basic_cli_command.snap  codegen_snapshots__basic_cli_main.snap  codegen_snapshots__command_with_handler_import.snap  codegen_snapshots__index_file.snap  codegen_snapshots__package_json.snap
bao-codegen/src/: bao_toml.rs  builder.rs  code_builder.rs  commands.rs  file_builder.rs  handlers.rs  imports.rs  indent.rs  lib.rs  lower.rs  naming.rs  paths.rs  renderable.rs  traits.rs
bao-codegen/src/adapters/: async_runtime.rs  cli.rs  database.rs  error.rs  mod.rs
bao-codegen/src/builder/: code_builder.rs  expr.rs  file_builder.rs  function.rs  mod.rs  structure.rs  types.rs
bao-codegen/src/generation/: bao_toml.rs  handlers.rs  imports.rs  mod.rs  registry.rs
bao-codegen/src/language/: mod.rs  traits.rs
bao-codegen/src/mappers/: mod.rs  rust.rs  typescript.rs
bao-codegen/src/pipeline/: context.rs  diagnostic.rs  mod.rs  phase.rs  plugin.rs  runner.rs  snapshot.rs
bao-codegen/src/pipeline/phases/: analyze.rs  lower.rs  mod.rs  validate.rs
bao-codegen/src/pipeline/phases/validate/: lint.rs  mod.rs
bao-codegen/src/pipeline/phases/validate/lints/: command_naming.rs  duplicate_command.rs  empty_description.rs  mod.rs
bao-codegen/src/schema/: commands.rs  computed.rs  display.rs  mod.rs  types.rs
bao-codegen/src/testing/: mod.rs
bao-core/: Cargo.toml  README.md
bao-core/src/: codegen.rs  file.rs  lib.rs  type_mapper.rs  types.rs  utils.rs  version.rs
bao-ir/: Cargo.toml  README.md
bao-ir/src/: app.rs  lib.rs  resource.rs  serde_helpers.rs  types.rs
bao-manifest/: Cargo.toml  README.md
bao-manifest/src/: cli.rs  command.rs  error.rs  file.rs  lib.rs  manifest.rs  serialize.rs  validate.rs
bao-manifest/src/command/: deserialize.rs  mod.rs  validate.rs
bao-manifest/src/context/: http.rs  mod.rs
bao-manifest/src/context/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
bao-manifest/src/manifest/: cli.rs  edit.rs  file.rs  language.rs  mod.rs  parse.rs  validate.rs
bao-schema/: Cargo.toml
bao-schema/src/: command.rs  error.rs  lib.rs
bao-schema/src/context/: http.rs  mod.rs
bao-schema/src/context/database/: mysql.rs  postgres.rs  sqlite.rs
bao/src/: language.rs  main.rs
bao/src/commands/: add.rs  bake.rs  check.rs  clean.rs  completions.rs  explain.rs  fmt.rs  generate.rs  info.rs  init.rs  list.rs  mod.rs  remove.rs  rename.rs  run.rs
bao/src/ops/: bake.rs  check.rs  clean.rs  explain.rs  info.rs  mod.rs
bao/src/reports/: bake.rs  check.rs  clean.rs  explain.rs  info.rs  mod.rs  output.rs
docs/: .gitignore  astro.config.ts  biome.json  package.json  wrangler.jsonc
docs/public/: robots.txt  sitemap.xml
docs/src/components/: roadmap.astro
docs/src/layouts/: DocsLayout.astro
docs/src/pages/: index.astro
docs/src/pages/docs/: commands.astro  configuration.astro  getting-started.astro  index.astro  installation.astro  quickstart.astro
docs/src/pages/docs/guide/: arguments.astro  cli-metadata.astro  commands.astro  context.astro  flags.astro  subcommands.astro
docs/src/pages/docs/reference/: add.astro  bake.astro  check.astro  clean.astro  completions.astro  fmt.astro  info.astro  init.astro  list.astro  remove.astro  rename.astro  run.astro
docs/src/styles/: global.css
docs/src/utils/: changelog.ts
