[workspace]
resolver = "2"
members = ["bao", "bao-codegen", "bao-codegen-rust", "bao-core", "bao-schema"]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/roushou/bao"
repository = "https://github.com/roushou/bao"
license = "MIT"
keywords = ["clap", "cli", "codegen", "generator"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
baobao-codegen = { path = "bao-codegen", version = "0.1.0" }
baobao-codegen-rust = { path = "bao-codegen-rust", version = "0.1.0" }
baobao-core = { path = "bao-core", version = "0.1.0" }
baobao-schema = { path = "bao-schema", version = "0.1.0" }
# External dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6"
eyre = "0.6"
indexmap = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9.2"
