[workspace]
resolver = "2"
members = ["bao", "bao-codegen", "bao-codegen-rust", "bao-codegen-typescript", "bao-core", "bao-manifest"]

[workspace.package]
version = "0.3.2"
edition = "2024"
homepage = "https://github.com/roushou/bao"
repository = "https://github.com/roushou/bao"
license = "MIT"
keywords = ["clap", "cli", "codegen", "generator"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
baobao-codegen = { path = "bao-codegen", version = "0.3.2" }
baobao-codegen-rust = { path = "bao-codegen-rust", version = "0.3.2" }
baobao-codegen-typescript = { path = "bao-codegen-typescript", version = "0.3.2" }
baobao-core = { path = "bao-core", version = "0.3.2" }
baobao-manifest = { path = "bao-manifest", version = "0.3.2" }
# External dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6"
eyre = "0.6"
indexmap = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9.2"
