[package]
name = "baobao-codegen-rust"
version.workspace = true
edition.workspace = true
description = "Rust code generator for Bao CLI generator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baobao-core = { workspace = true }
baobao-schema = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
