[package]
name = "baobao-codegen"
version.workspace = true
edition.workspace = true
description = "Shared code generation utilities for Bao CLI generator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baobao-core = { workspace = true }
baobao-manifest = { workspace = true }
eyre.workspace = true
indexmap.workspace = true

[dependencies.tempfile]
version = "3"
optional = true

[dev-dependencies]
tempfile = "3"

[features]
testing = ["dep:tempfile"]
