[package]
name = "baobao-core"
version.workspace = true
edition.workspace = true
description = "Core utilities for Bao CLI generator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
eyre.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
