[package]
name = "baobao-ir"
version.workspace = true
edition.workspace = true
description = "Intermediate representation types for Bao CLI generator"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
