[package]
name = "baobao-manifest"
version.workspace = true
edition.workspace = true
description = "TOML manifest parsing and validation for Bao CLI generator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
