[package]
name = "baobao-manifest"
version.workspace = true
edition.workspace = true
description = "TOML manifest parsing and validation for Bao CLI generator"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baobao-core = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = "1"
