[package]
name = "baobao"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generate type-safe CLI applications from a simple TOML schema"

[[bin]]
name = "bao"
path = "src/main.rs"

[dependencies]
baobao-core = { workspace = true }
baobao-schema = { workspace = true }
baobao-codegen-rust = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
miette = { workspace = true }
