[package]
name = "baobao"
version.workspace = true
edition.workspace = true
description = "Generate type-safe CLI applications from a simple TOML schema"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bao"
path = "src/main.rs"

[dependencies]
baobao-codegen = { workspace = true }
baobao-codegen-rust = { workspace = true }
baobao-codegen-typescript = { workspace = true }
baobao-core = { workspace = true }
baobao-manifest = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
miette = { workspace = true }
